# PPsat

./: .gitignore  CMakeLists.txt  LICENSE  NNF_lexer.g4  NNF_parser.g4  README.md  grammar.txt  report.html  x  y
.github/workflows/: build.yml
PPexe/: CMakeLists.txt  main.cpp
PPsat/: CMakeLists.txt  CNF.hpp  CNF_simple.hpp  PPsat-measure.sh  adjacency.hpp  adjacency_list.cpp  adjacency_list.hpp  adjacency_none.cpp  adjacency_none.hpp  adjacency_picker.hpp  adjacency_set.cpp  adjacency_set.hpp  adjacency_set_unordered.cpp  adjacency_set_unordered.hpp  adjacency_type.hpp  adjacency_vector.cpp  adjacency_vector.hpp  antlr_parser.hpp  antlrer.cpp  antlrer.hpp  any_iterator.hpp  assumptions.hpp  assumptions_basic.cpp  assumptions_basic.hpp  builder.cpp  builder.hpp  builder_ASSUME.cpp  builder_ASSUME.hpp  builder_DIMACS.cpp  builder_DIMACS.hpp  builder_SMTLIB_tseitin.cpp  builder_SMTLIB_tseitin.hpp  builder_tseitin.hpp  clause.cpp  clause.hpp  clause_basic.cpp  clause_basic.hpp  clause_category.hpp  clause_counting.cpp  clause_counting.hpp  (+186 more)
PPsat-base/: CMakeLists.txt  antlr_lexer.cpp  antlr_lexer.hpp  antlr_parser.hpp  antlrer.cpp  antlrer.hpp  builder.cpp  builder.hpp  clause.cpp  clause.hpp  clause_category.hpp  conditional.hpp  constant_string.hpp  container_factory.hpp  containers.hpp  discard.hpp  discard_iterator.hpp  error_listener.cpp  error_listener.hpp  factory.hpp  factory_container.hpp  factory_lexer.hpp  factory_parser.hpp  formula.cpp  formula.hpp  iterator_any.hpp  literal.cpp  literal.hpp  logger.cpp  logger.hpp  logger_ostream.cpp  logger_ostream.hpp  logger_subroutine.cpp  logger_subroutine.hpp  optional.hpp  partial_apply.hpp  preprocessor.hpp  preprocessor_basic.cpp  preprocessor_basic.hpp  preprocessor_id.cpp  (+28 more)
PPsat-base/cli/: argument.hpp  arguments.hpp  arguments_container.hpp  error_handler.hpp  error_handler_container.hpp  error_handler_simple.cpp  error_handler_simple.hpp  option.hpp  parameter.cpp  parameter.hpp  parameters.hpp  parser.cpp  parser.hpp
PPsat-base/cli/argument/: file.cpp  file.hpp  number.cpp  number.hpp  simple_number.hpp
PPsat-base/cli/option/: bool.cpp  bool.hpp  double.cpp  double.hpp  enum.cpp  enum.hpp  enum_typed.hpp  int.cpp  int.hpp  named.cpp  named.hpp  number.cpp  number.hpp  simple_named.hpp  simple_named_bool.hpp  simple_named_double.hpp  simple_named_enum_typed.hpp  simple_named_int.hpp  simple_named_number.hpp
PPsat-base/cli/parameter/: simple.hpp
PPsat-crypt/: CMakeLists.txt  PPsat-crypt.sh  clause.cpp  clause.hpp  main.cpp  variable.cpp  variable.hpp  visitor_constraints.cpp  visitor_constraints.hpp  visitor_variable_def.cpp  visitor_variable_def.hpp  visitor_variables.cpp  visitor_variables.hpp
PPsat-crypt/cli/: options.hpp
PPsat-crypt/inputs/: a.crypt  basic.crypt  d.crypt  e.crypt  f.crypt  sofisticated.crypt  sophisticated.crypt
PPsat-queens/: CMakeLists.txt  PPsat-queens-measure.sh  PPsat-queens.sh  generate.cpp  generate.hpp  main.cpp
PPsat/cli/: argument.hpp  arguments.hpp  arguments_container.hpp  error_handler.hpp  error_handler_container.hpp  option.hpp  options.cpp  options.hpp  parameter.hpp  parameters.cpp  parameters.hpp
PPsat/cli/argument/: file.cpp  file.hpp
PPsat/cli/option/: bool.hpp  format.cpp  format.hpp  named.hpp  parser.cpp  parser.hpp  subprogram.hpp
PPsat/cli/parameter/: simple.hpp
PPsat/inputs/: test.cnf  uf50-010.cnf  uf50-011.cnf  uf50-012.cnf  uf50-013.cnf  uf50-014.cnf  uf50-015.cnf  uf50-016.cnf  uf50-017.cnf  uf50-018.cnf  uf50-019.cnf  uf75-010.cnf  uf75-015.cnf  uf75-016.cnf  uf75-018.cnf  uf75-019.cnf  uuf50-010.cnf  uuf50-011.cnf  uuf50-012.cnf  uuf50-013.cnf  uuf50-014.cnf  uuf50-015.cnf  uuf50-016.cnf  uuf50-017.cnf  uuf50-018.cnf  uuf50-019.cnf  uuf75-010.cnf  uuf75-011.cnf  uuf75-017.cnf
PPsat/inputs/sat/: uf75-011.cnf  uf75-012.cnf  uf75-013.cnf  uf75-014.cnf  uf75-017.cnf
PPsat/inputs/unsat/: uuf125-01.cnf  uuf75-012.cnf  uuf75-013.cnf  uuf75-014.cnf  uuf75-015.cnf  uuf75-016.cnf  uuf75-018.cnf  uuf75-019.cnf
PPsat/subprogram/: cdcl.cpp  cdcl.hpp  convert.cpp  convert.hpp  dpll.cpp  dpll.hpp  help.cpp  help.hpp  invalid.cpp  solve.cpp
cmake/: Antlr4Package.md  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4-generator.cmake.in
cmake/antlr4-generator/: antlr4-generator-config.cmake
cmake/antlr4-runtime/: antlr4-runtime-config.cmake  antlr4-targets-release.cmake  antlr4-targets.cmake
examples/: CMakeLists.txt
examples/PPsat-queens/: CMakeLists.txt  PPsat-queens-generate.sh  PPsat-queens-iterate.sh  main.cpp  measure.sh  negate_model.sh
grammar/: lexer_ASSUME.g4  lexer_CRYPT.g4  lexer_DIMACS.g4  lexer_SMTLIB.g4  parser_ASSUME.g4  parser_CRYPT.g4  parser_DIMACS.g4  parser_SMTLIB.g4
inputs/: nested_5.cnf  queens.cnf  queens5.cnf  simplest.cnf  test.sat  toy_5.cnf  toy_5_error.sat
inputs/unsat/: uuf100-0998.cnf
report/: CMakeLists.txt  README.md  instrumentation.cpp  makefile  makefile.rules  perf-instr.sh  perf-perf.sh  perf-profiling.sh  perf-warmup.sh  perf.sh  report-performance.Rmd  report-performance.ipynb  report.Rmd  results-instr.csv  results-nonrandom.csv  results-perf.csv  results-queens.csv  results-warmup.csv  results.csv
